styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  --clr-dark: rgb(0, 0, 0);
  --clr-light: rgb(219, 216, 216);
  --clr-med: gray;
  --clr-med-dark: rgb(65, 66, 67);
  --clr-highlight: rgb(88, 95, 221);

  --br: 1px;

  --ff: 'Montserrat', Arial, sans-serif;
  --ls-narrow: 0.2ch;
  --ls-wide: 0.5ch;
}

body {
  position: relative;
  background-color: var(--clr-dark);
  color: var(--clr-light);
  min-height: 100vh;

  font-family: var(--ff);
  text-transform: uppercase;
  letter-spacing: var(--ls-narrow);

  display: flex;
  flex-direction: column;
}

.container {
  position: relative;
  width: min(95%, 100em);
  max-width: 95%;
  margin-inline: auto;
}

ul {
  list-style-type: none;
}

.clickable {
  cursor: pointer;
  opacity: 1;
  transition: all 300ms ease-in-out;
}

.clickable:hover,
.clickable:focus-visible {
  opacity: 0.8;
  transform: scale(0.98);
}

header {
  position: relative;
  padding-block: 1em;
  padding-block: clamp(1em, 5vh, 1rem);
}

.header__container {
  margin-inline: auto;
  width: min(95%, 100em);
  max-width: 95%;
  display: grid;
  grid-template-columns: 2.5em 1fr 2.5em;
  align-items: center;
}

.header__title {
  text-align: center;
  font-size: 2rem;
  font-size: clamp(1.5rem, 1.1rem + 1vw, 1.9rem);
  
  font-weight: 500;
  letter-spacing: var(--ls-wide);
  line-height: 1.1;

  grid-column: 2 / 3;
}

.btn {
  padding-block: 1em;
  opacity: 1;
  font-family: var(--ff);
  font-size: 0.9rem;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: var(--ls-narrow);
  
  border-radius: var(--br);
  cursor: pointer;
  flex: 1;
  transition: all 300ms ease-in-out;
}

.clearBtn {
  border: 2px solid var(--clr-light);
}

.saveBtn {
  background-color: transparent;
  color: var(--clr-light);

  border: 2px solid var(--clr-med);
  min-width: max-content;
}

.fa-check {
  color: rgb(5, 249, 5);
  width: 1rem;
  margin-left: 0.4em;
}

.hidden {
  display: none;
}

main {
  position: relative;
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main__container {
  margin-block: clamp(0.8em, 0.8em + 1vh, 1.5em);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2.5em;
}

#main__grid {
  position: relative;
  background-color: rgb(255, 255, 255);
  width: clamp(50vw, 100%, 600px);
  height: clamp(50vw, 100%, 600px);
  aspect-ratio: 1;

  margin: 0 auto;
  touch-action: none;
  cursor: pointer;
  display: grid;
}

.cell {
  background: rgb(0, 0, 0);
  opacity: 0;
  flex: 1;
}

.grid__cellContainer {
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: stretch;
}

[data-gridlines="true"] {
  outline: 1px dotted var(--clr-highlight);
}

[data-toggleEvents="true"] {
  z-index: -1;
  pointer-events: none;
}

#main__controls {
  position: relative;
  margin-block: 0.3em;
  margin-inline: auto;
  width: 50%;
  width: min(100%, 600px);
  width: clamp(50vw, 100%, 600px);
  font-size: 0.8rem;
  letter-spacing: 0.1ch;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  row-gap: 3em;
}

.controls__toggleGridlines {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.2em;
}

.controls__label {
  display: flex;
  align-items: center;
  font-size: 0.9rem;
  font-weight: 500;
  gap: 1em;
}

.slider-size {
  margin-left: -0.5em;
}

.controls__toggle {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  overflow: hidden;
  white-space: nowrap;
}

.controls__track {
  display: inline-block;
  position: relative;
  width: 2.4rem;
  height: 1.2rem;
  background-color: var(--clr-med);
  border-radius: 100px;
}

.controls__track::after {
  content: "";
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0.1rem;
  left: 0.1rem;
  border-radius: 50%;
  background-color: var(--clr-light);
  pointer-events: none;
  transition: all 0.3s;
}

.controls__toggle:focus-visible + .controls__track {
  border-radius: 999px;
  box-shadow: 0 0 0 2px var(--clr-dark),
              0 0 0 0.25em var(--clr-highlight);
}

.controls__toggle:checked + .controls__track::after {
  left: 1.3rem;
}

.controls__toggle:checked + .controls__track {
  background-color: var(--clr-highlight);
}

.controls__slider {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1.5em;
}

.slide-container {
  width: 70%;
  display: flex;
  flex-wrap: nowrap;
  justify-content: center;
  flex: 1;
}

#slider {
  -webkit-appearance: none;
  appearance: none;
  width: 100%;
  background: transparent;
  outline: none;
  height: 0.4rem;
  border-radius: 5px;
  opacity: 1;
  color: var(--clr-dark);
  cursor: pointer;
  transition: all 300ms ease-in-out;
}

#slider:hover,
#slider:focus-visible {
  opacity: 0.7;
}

#slider::-webkit-slider-runnable-track {
  background-color: var(--clr-med);
  height: 0.4rem;
  border-radius: 5px;
}

#slider::-moz-range-track {
  background-color: var(--clr-med);
  height: 0.4rem;
  border-radius: 5px;  
}

#slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--clr-light);
  width: 1rem;
  height: 1rem;
  border-radius: var(--br);
  margin-top: -0.3rem;
  /* Center thumb by subtracting half thumb height from half track height */
  margin-top: calc(0.4rem/2 - 1rem/2);
}

#slider::-moz-range-thumb {
  border: none;
  border-radius: var(--br);
  background-color: var(--clr-light);
  width: 1rem;
  height: 1rem;
}

#slider:focus-visible::-webkit-slider-thumb {
  border: 1px solid var(--clr-light);
  box-shadow: 0 0 0 2px var(--clr-dark),
              0 0 0 0.25em var(--clr-highlight);
}

#slider:focus-visible::-moz-range-thumb {
  border: 1px solid var(--clr-light);
  box-shadow: 0 0 0 2px var(--clr-dark),
              0 0 0 0.25em var(--clr-highlight);
}

#slider::-ms-fill-lower {
  background-color: var(--clr-light);
}

#slider::-moz-range-progress {
  background-color: var(--clr-light);
}

.no-select {
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.no-select:focus {
  outline: none !important;
}

.controls__buttons {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 1.5em;
}

.clearBtn {
  color: var(--clr-dark);
  background-color: var(--clr-light);
}

.clearBtn:hover,
.clearBtn:focus-visible {
  opacity: 0.7;
}

.clearBtn, .saveBtn {
  width: clamp(140px, 100%, 100%);
  padding-inline: 2em;
  flex: 1;
  opacity: 1;
  outline: 2px solid transparent;
}

.clearBtn:focus-visible,
.saveBtn:focus-visible {
  box-shadow: 0 0 0 2px var(--clr-dark),
              0 0 0 0.25em var(--clr-highlight);
}

.btn:active {
  transform: scale(.95);
}

footer {
  position: relative;
  padding-block: 2em;
  font-size: 0.7rem;
  font-size: clamp(0.5rem, 0.5rem + 1vw, 0.7rem);
  text-align: center;
}

a {
  color: var(--clr-light);
  text-decoration: none;
  opacity: 1;
  transition: all 300ms ease-in-out;
  border-radius: var(--br);
  outline: 1px solid transparent;
}

a:hover {
  color: var(--clr-highlight);
}

a:focus-visible {
  color: var(--clr-highlight);
  /* For focus outline */
  box-shadow: 0 0 0 0 var(--clr-dark),
              0 0 0 1px var(--clr-highlight);
}



.footer__container {
  width: 300px;
  width: clamp(260px, 65%, 100%);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  column-gap: 0.5em;
  row-gap: clamp(0.2em, 0.2em + 1vh, 0.6em);
}

.footer__portfolio {
  padding: 0.5em 0.1em;
}

.footer__links {
  font-size: 1.1rem;
  font-size: clamp(0.8rem, 0.8rem + 1vw, 1.1rem);
  display: flex;
}

.footer__link {
  transition: all 300ms ease-in-out;
}

.footer__link:hover,
.footer__link:focus-within {
  transform: scale(0.95);
}

.footer__link > a {
  padding: 0.25em 0.5em;
}

.footer__icon {
  letter-spacing: normal;
}

#main__grid::selection {
  background: none;
  color: none;
}

#main__grid::-moz-selection {
  background: none;
  color: none;
}

@media (orientation: landscape) {
  .header__container {
    display: flex;
    justify-content: space-between;
  }

  .main__container {
    flex-direction: row;
    justify-content: center;
    gap: clamp(2em, 2em + 2vw, 10em);
  }

  #main__controls {
    gap: clamp(3em, 3em + 1vw, 8em);
  }

}

